# Django-package

base-cmd/: .gitignore  README.md  pyproject.toml
base-cmd/base_cmd/: __init__.py  docs.py  package_cli.py  parser.py  readme.py  terminal.py  test_cmd.py
base-cmd/base_cmd/preview/: __init__.py  kroki.py  viewer.py
django-inference/: .gitignore  README.md  pyproject.toml
django-inference/inference/: __init__.py  apps.py  cli.py  conf.py  factory.py  parsers.py  preview.py  schemas.py  selectors.py  serializers.py  services.py  tests.py  urls.py  views.py
django-inference/inference/docs/: package_archi.puml
django-inference/inference/providers/: __init__.py  base.py  chat_completions.py  mistral.py  ollama.py  openai.py
django-inference/tests/: settings.py  test_chat_completions_providers.py  test_ollama_provider.py  urls.py
inference/: .gitignore  README.md  pyproject.toml
inference/app/: __init__.py  apps.py  cli.py  complete_cmd.py  conf.py  factory.py  parsers.py  preview.py  selectors.py  services.py  terminal.py  tests.py
inference/app/providers/: base.py  chat_completions.py  mistral.py  ollama.py  openai.py
inference/completion/: __init__.py  apps.py  cli.py  complete_cmd.py  conf.py  exceptions.py  factory.py  parsers.py  preview.py  readme.py  selectors.py  services.py  settings_source.py  terminal.py  tests.py
inference/completion/docs/: package_archi.puml
inference/completion/examples/: inference.dev.json
inference/completion/providers/: base.py  chat_completions.py  mistral.py  ollama.py  openai.py
inference/tests/: settings.py  test_chat_completions_providers.py  test_ollama_provider.py  test_settings_source.py
inference/tests/config/: inference.test.json
payload-sentinel/: .gitignore  README.md  pyproject.toml
payload-sentinel/payload_sentinel/: __init__.py  analyzer.py  apps.py  cli.py  collector.py  conf.py  debug_format.py  decorators.py  exceptions.py  logging_integration.py  middleware.py  mixins.py  response_inspector.py  schemas.py  selectors.py  services.py  settings_source.py  sql_parser.py  status_cmd.py
payload-sentinel/payload_sentinel/docs/: package_archi.puml
payload-sentinel/payload_sentinel/examples/: payload.dev.json
payload-sentinel/tests/: settings.py  test_analyzer.py  test_collector.py  test_debug_format.py  test_decorators.py  test_middleware.py  test_response_inspector.py  test_settings_source.py  test_sql_parser.py  urls.py
payload-sentinel/tests/config/: payload.test.json
query-sentinel/: README.md  pyproject.toml
query-sentinel/query_sentinel/: __init__.py  analyzer.py  apps.py  cli.py  collector.py  conf.py  debug_format.py  decorators.py  exceptions.py  logging_integration.py  middleware.py  mixins.py  origin.py  preview.py  readme.py  schemas.py  selectors.py  services.py  settings_source.py  status_cmd.py  terminal.py  tests.py
query-sentinel/query_sentinel/docs/: package_archi.puml
query-sentinel/query_sentinel/examples/: sentinel.dev.json
query-sentinel/tests/: settings.py  test_analyzer.py  test_collector.py  test_debug_format.py  test_decorators.py  test_middleware.py  test_settings_source.py  urls.py
query-sentinel/tests/config/: sentinel.test.json
rag/: .gitignore  README.md  pyproject.toml
rag/rag/: __init__.py  apps.py  chunkers.py  cli.py  conf.py  exceptions.py  factory.py  preview.py  preview_viewer.py  prompt.py  rag_cmd.py  readme.py  schemas.py  selectors.py  services.py  settings_source.py  terminal.py  tests.py
rag/rag/docs/: package_archi.puml
rag/rag/embedders/: base.py  embeddings_api.py  mistral.py  ollama.py  openai.py
rag/rag/examples/: rag.dev.json
rag/rag/stores/: base.py  memory.py
rag/tests/: __init__.py  conftest.py  settings.py  test_chunkers.py  test_embedders.py  test_memory_store.py  test_selectors.py  test_services.py  test_settings_source.py
rag/tests/config/: rag.test.json
