[project]
name = "base-cmd"
version = "0.1.0"
description = "CLI partagée pour les packages Django (preview, readme, test, help)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["base_cmd"]

[tool.ruff]
line-length = 100
target-version = "py312"
