[project]
name = "django-inference"
version = "0.1.0"
description = "Application Django inference (Service Layer, DRF)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django>=5.0",
    "djangorestframework>=3.15",
    "httpx>=0.27",
]

[project.scripts]
inference-preview = "inference.preview:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.8",
    "ruff>=0.8",
    "mypy>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["inference"]

[tool.hatch.build.targets.sdist]
include = ["inference/docs/package_archi.puml"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
python_files = ["test_*.py", "tests.py"]

[tool.ruff]
line-length = 100
target-version = "py312"