[project]
name = "payload-sentinel"
version = "0.1.0"
description = "Package Django — détection sur-sélection SQL et fuites de données API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.0",
    "httpx>=0.27",
    "base-cmd",
]

[tool.uv.sources]
base-cmd = { path = "../base-cmd" }

[project.scripts]
payload-sentinel = "payload_sentinel.cli:main"

[project.optional-dependencies]
structlog = ["structlog>=24.0"]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.8",
    "ruff>=0.8",
    "mypy>=1.0",
    "structlog>=24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["payload_sentinel"]

[tool.hatch.build.targets.wheel.force-include]
"README.md" = "payload_sentinel/README.md"

[tool.hatch.build.targets.sdist]
include = ["payload_sentinel/docs/package_archi.puml"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
python_files = ["test_*.py", "tests.py"]

[tool.ruff]
line-length = 100
target-version = "py312"
