[project]
name = "rag"
version = "0.1.0"
description = "Package Django RAG (embedding, retrieval, Service Layer)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.0",
    "httpx>=0.27",
]

[project.scripts]
rag = "rag.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.8",
    "ruff>=0.8",
    "mypy>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rag"]

[tool.hatch.build.targets.wheel.force-include]
"README.md" = "rag/README.md"

[tool.hatch.build.targets.sdist]
include = ["rag/docs/package_archi.puml"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
python_files = ["test_*.py", "tests.py"]

[tool.ruff]
line-length = 100
target-version = "py312"
